@@ -1,3 +1,8 @@
+2006-12-17  Hajime Ishitani <pigmon@mail.snd.co.jp>
+
+	* src/if_8139.c:
+	added 0x10ec/0x8129 for RTL8139C(L) of a known device.
+
 2006-11-13  Hajime Ishitani <pigmon@mail.snd.co.jp>
 
 	* src/if_8139.c: Enabled "PUN/LinkChg" interrupt.
